data/all_generated_tests/raw_wast_tests/block_InfiniteLoops_2121.wast
;; 2. **Unmatched `block` and `end`**:    - **Test Description**: Craft a block containing a loop where an `end` instruction is misplaced or missing, leading to infinite execution.    - **Constraint**: Ensuring proper nesting of `block` and `end` instructions so the loop terminates.    - **Relation to Infinite Loops**: Misplacement or absence of `end` can cause the block to become unbounded.

(assert_invalid
  (module (func 
    (block (loop 
      (br 1)
    ))
  ))
  "end of loop or block expected"
)